# posecnn-pytorch

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
lib/: setup.py
lib/datasets/: imdb.py  (+21 more)
lib/synthesize/: CMakeLists.txt
lib/synthesize/include/: backprojection.h  camera.h  cameraFactory.h  debugHelpers.h  glRender.h  glRenderTypes.h  icp.h  linear.h  linearSystems.h  macros.h  poly3.h  rig.h  synthesize.hpp  tensor.h
lib/synthesize/shaders/: canonicalVertsAndTexture.frag  canonicalVertsAndTexture.vert
lib/synthesize/src/: backprojection.cpp  backprojection.cu  camera.cpp  cameraFactory.cpp  icp.cpp  icp.cu  linear.cpp  poly3.cpp  rig.cpp  synthesize.cpp
msg/: Detection.msg  DetectionList.msg
ngc/: run_docker.sh  run_test_job.sh  train_ngc.sh
planning/: _init_paths.py  actions.py  kitchen_domain.py  kitchen_part_right.urdf  main.py  main_tamp.py  moveit.py  omg_planner.py  pose_listener.py
ros/: _init_paths.py  camera.py  collect_images.py  collect_images_Azure.py  collect_images_D435.py  collect_images_kinect.py  dart_stitcher_kinect2.py  data_collection_pose_rbpf.py  depth_filter.py  isaac_sim_bag.rviz  listener.py  mask_listener.py  posecnn.rviz  poserbpf_listener.py  prbpf_real.rviz  randomize_ycb.py  ros_utils.py  start_depth_masks.py  start_poserbpf.py  test_images.py  test_images_D435.py  test_images_isaac_sim.py  test_images_prbpf.py  test_images_segmentation.py  video_recorder.py
tools/: _init_paths.py  normalize_mesh.py  nyu_extract_images.py  test_allocentric.py  test_codebook.py  test_cosegmentation.py  test_embedding.py  test_images.py  test_images_simple.py  test_images_with_mask.py  test_moped.py  test_net.py  test_render.py  test_segmentation.py  train_encoders_self_supervision.py  train_net.py  train_net_mapping.py  train_net_self_supervision.py  view.py  window.py  ycb_globals.py  ycb_write_debug_indexes.py
(+678 files in other folders)
